MCKIN-29786 translation update for N/A

--- a/group_project_v2/translations/pl/LC_MESSAGES/text.po
+++ b/group_project_v2/translations/pl/LC_MESSAGES/text.po
@@ -388,7 +388,7 @@ msgstr "Wyświetlanie oceny"
 
 #: stage/feedback_review.py:163 stage_components.py:746
 msgid "N/A"
-msgstr "N/D"
+msgstr "Note: k. A"
 
 #: stage/mixins.py:14
 msgid "Completed"
